Add nearly empty yade.log module: py/log.py & py/_log.cpp

--- a/py/CMakeLists.txt
+++ b/py/CMakeLists.txt
@@ -34,6 +34,12 @@ SET_TARGET_PROPERTIES(_libVersions PROPERTIES PREFIX "")
 TARGET_LINK_LIBRARIES(_libVersions yade)
 INSTALL(TARGETS _libVersions DESTINATION "${YADE_PY_PATH}/yade/")
 
+# hint: follow changes in d067b0696a8 to add new modules.
+ADD_LIBRARY(_log SHARED "${CMAKE_CURRENT_SOURCE_DIR}/_log.cpp")
+SET_TARGET_PROPERTIES(_log PROPERTIES PREFIX "")
+TARGET_LINK_LIBRARIES(_log yade)
+INSTALL(TARGETS _log DESTINATION "${YADE_PY_PATH}/yade/")
+
 ADD_LIBRARY(WeightedAverage2d SHARED "${CMAKE_CURRENT_SOURCE_DIR}/WeightedAverage2d.cpp")
 SET_TARGET_PROPERTIES(WeightedAverage2d PROPERTIES PREFIX "")
 INSTALL(TARGETS WeightedAverage2d DESTINATION "${YADE_PY_PATH}/yade/")
