make the FEM code optional (why is it in /DEM btw??)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@
 #  ENABLE_POTENTIAL_BLOCKS: enable potential blocks option (OFF by default)
 #  ENABLE_POTENTIAL_PARTICLES: enable potential particles option (OFF by default)
 #  ENABLE_DEFORM: enable constant volume deformation engine (OFF by default)
+#  ENABLE_FEMLIKE: enable meshed solids (FEM-like)
 #  ENABLE_OAR: generate a script for oar-based task scheduler (OFF by default)
 #  runtimePREFIX: used for packaging, when install directory is not the same is runtime directory (/usr/local by default)
 #  CHUNKSIZE: set >1, if you want several sources to be compiled at once. Increases compilation speed and RAM-consumption during it (1 by default)
@@ -63,6 +64,7 @@ OPTION(ENABLE_OAR "Generate script for oar-based task scheduler" OFF)
 OPTION(USE_QT5 "USE Qt5 for GUI" ON)
 OPTION(ENABLE_POTENTIAL_BLOCKS "Enable PotentialBlocks" ON)
 OPTION(ENABLE_DEFORM "Enable Deformation Engine" OFF)
+OPTION(ENABLE_FEMLIKE "Enable deformable solids" OFF)
 OPTION(CHOLMOD_GPU "Enable GPU acceleration flow engine direct solver" OFF)
 OPTION(ENABLE_THERMAL "Enable thermal engine (experimental)" OFF)
 #Set -DPYTHON_VERSION numeric option below:
@@ -479,6 +481,13 @@ IF(ENABLE_DEFORM)
 ELSE(ENABLE_DEFORM)
   SET(DISABLED_FEATS "${DISABLED_FEATS} DEFORM")
 ENDIF(ENABLE_DEFORM)
+#===============================================
+IF(ENABLE_FEMLIKE)
+  ADD_DEFINITIONS("-DYADE_FEM")
+  SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} FEMLIKE")
+ELSE(ENABLE_FEMLIKE)
+  SET(DISABLED_FEATS "${DISABLED_FEATS} FEMLIKE")
+ENDIF(ENABLE_FEMLIKE)
 #===============================================
 IF(ENABLE_LIQMIGRATION)
   ADD_DEFINITIONS("-DYADE_LIQMIGRATION")
