--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -245,6 +245,7 @@ check_18_04:
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
   before_script:
     - export OMPI_MCA_rmaps_base_oversubscribe=1
+    - export OMPI_MCA_btl_vader_single_copy_mechanism=none
   only:
     - master
     - merge_request
@@ -254,6 +255,9 @@ check_18_04:
 check_stretch:
   <<: *check_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
+  before_script:
+    - export OMPI_MCA_rmaps_base_oversubscribe=1
+    - export OMPI_MCA_btl_vader_single_copy_mechanism=none
   only:
     - master
     - merge_request
@@ -265,6 +269,7 @@ check_buster:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   before_script:
     - export OMPI_MCA_rmaps_base_oversubscribe=1
+    - export OMPI_MCA_btl_vader_single_copy_mechanism=none
   only:
     - master
     - merge_request
